2008-05-06  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_string.c (bk_string_tokenize_split): := should have been
	:- from the begining. We now support both.

2008-04-25  James Tanis  <jtt@stockade.tanis.org>

	* include/libbk.h (BK_INITIAL_STREQ): Macro for safely (I hope)
	checking the initial substring (proper or not) of a string.

2008-04-17  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_addrgroup.c: Don't run FD handler in some calls to
	bk_run_close. 

	* lib/b_run.c (bk_run_close): Option to bk_run_close to be called
	without running the FD handler.

2008-04-15  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_addrgroup.c (listen_activity): For UDP obtain the remote
	address with a NULL read and MSG_PEEK.

	* include/libbk.h (BK_NET_FLAG_STANDARD_UDP): BAKA UDP is
	officially deprecated (it was stupid and unnecessary).

	* lib/b_url.c (bk_url_parse_authority): Change bk_url_authority to
	look like other libbk structs.

2008-04-09  James Tanis  <jtt@localhost.localdomain>

	* ssl/b_ssl.c: Avoid a dangling reference by withdrawing the iofun
	from the ioh structure before freeing the ssl state structure.

2007-12-10  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_debug.c (bk_debug_istream): Function to return the
	debugging stream

2007-12-04  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_memx.c (bk_memx_append): Convert function to use count
	instead of len, so as to match the rest of the memx API.
	(bk_memx_info): Function export all values in a bk_memx.
	(bk_memx_get): Allow memx to actually allocate extra elements
	past the initial hint.

	* bk_memx_size: constant which allows outsiders to know the size
	of a bk_memx structure.

2007-09-13  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_getbyfoo.c (bk_ether_aton): Convert a string ethernet
	address to struct ether.
	(bk_ether_ntoa): Convert a struct ether to a ethernet address
	string. 

 2007-06-19  James Tanis  <jtt@outpost.tanis.org>
	