@@ -1,6 +1,6 @@
 #if !defined(lint) && !defined(__INSIGHT__)
 #include "libbk_compiler.h"
-UNUSED static const char libbk__rcsid[] = "$Id: b_search.c,v 1.16 2004/12/14 23:44:58 dupuy Exp $";
+UNUSED static const char libbk__rcsid[] = "$Id: b_search.c,v 1.17 2008/06/04 17:52:40 jtt Exp $";
 UNUSED static const char libbk__copyright[] = "Copyright (c) 2003";
 UNUSED static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -233,13 +233,13 @@ bkxml_attrnode_valbyname(bk_s B, xmlNodePtr node, const char *findname, bk_flags
   BK_ENTRY(B, __FUNCTION__, __FILE__, "libbkxml");
   xmlAttrPtr attr;
 
-  if (!(attr = bkxml_attrsearch(B, node, findname, flags)))
+  if (!(attr = bkxml_attrsearch(B, node, findname, 0)))
   {
     bk_error_printf(B, BK_ERR_NOTICE, "Could not locate attribute: %s\n", findname);
     BK_RETURN(B,NULL);    
   }
   
-  BK_RETURN(B, bkxml_attrnode_data(B, NULL, (xmlNodePtr)attr, 0));  
+  BK_RETURN(B, bkxml_attrnode_data(B, NULL, (xmlNodePtr)attr, flags));  
 }
 
 
