@@ -1,3 +1,9 @@
+2008-06-04  James Tanis  <jtt@stockade.tanis.org>
+
+	* xml/b_search.c (bkxml_attrnode_valbyname): Pass flags to
+	bkxml_attrnode_data() which uses 'em instead of bkxml_attrsearch()
+	which doesn't.
+
 2008-05-06  James Tanis  <jtt@stockade.tanis.org>
 
 	* lib/b_string.c (bk_string_tokenize_split): := should have been
